--- a/admin/edit-request/index.html
+++ b/admin/edit-request/index.html
@@ -6,15 +6,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
-  <link rel="stylesheet" href="../assets/css/assistance.css" />
-  <title>Request Assistance</title>
+  <link rel="stylesheet" href="../../assets/css/assistance.css" />
+  <title>Scaling Up Nutrition: Edit Technical Assistance</title>
 </head>
 
 <body>
   <header>
     <nav class="navbar navbar-expand-md" aria-label="Main Navigation">
       <a href="../" class="navbar-brand">
-        <img class="navbar-logo" src="../assets/img/svg/mainLogo.svg" alt="logo" />
+        <img class="navbar-logo" src="../../assets/img/svg/mainLogo.svg" alt="logo" />
       </a>
 
       <button class="custom-toggler navbar-toggler" type="button" aria-controls="navbarSupportedContent"
@@ -25,18 +25,18 @@
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="nav-items navbar-nav">
-          <li class="nav-item">
-            <a href="../admin/login/">LOGIN</a>
-          </li>
-          <li class="nav-item">
-            <a href="../maps/">TECHNICAL ASSISTANCE MAP</a>
-          </li>
-          <li class="nav-item">
-            <a href="../assistance/">REQUEST ASSISTANCE</a>
-          </li>
-          <li class="nav-item">
-            <a href="../">BACK TO MAIN SITE</a>
-          </li>
+            <li class="nav-item">
+                <a href="../../">BACK TO PUBLIC</a>
+            </li>
+            <li class="nav-item">
+                <a href="../maps/"> VIEW REQUESTS</a>
+            </li>
+            <li class="nav-item">
+                <a href="../create-user/">CREATE USERS</a>
+            </li>
+            <li class="nav-item">
+                <a href="../../">BACK TO MAIN SITE</a>
+            </li>
           <!-- <li class="nav-item navbar-dropdown">
                     <button type="button" data-lang="en-gb" class="dropbtn" aria-expanded="false" aria-controls="langDropdown">
                       EN
@@ -54,71 +54,69 @@
   <main class="assistance-main">
     <div class="assistance-content">
       <h1 class="assistance-title">
-        Creating easy access to technical assistance
+        Edit Technical assistant request 
       </h1>
       <h4 class="assistance-small-title">Kindly fill the details below</h4>
       <form id="assistanceForm">
         <div class="form-row">
           <div class="form-group">
             <label for="companyName">NAME OF COMPANY</label>
-            <input name="companyName" id="companyName" type="text" />
+            <input name="companyName" disabled id="companyName" type="text" />
           </div>
           <div class="form-group">
             <label for="companyName">COMPANY WEBSITE</label>
-            <input name="companyName" id="companyWebsite" type="text" />
+            <input name="companyName" disabled id="companyWebsite" type="text" />
           </div>
         </div>
         <div class="form-row">
           <div class="form-group">
             <label for="country">COUNTRY</label>
-            <select name="country" id="country" type="text">
+            <select name="country" disabled id="country" type="text">
               <option value="" disabled selected></option>
             </select>
           </div>
           <div class="form-group">
             <label for="city">CITY</label>
-            <input name="city" id="city" type="text" />
+            <input name="city" disabled id="city" type="text" />
           </div>
         </div>
         <div class="form-row">
           <div class="form-group">
             <label for="employeeCount">NUMBER OF EMPLOYEES </label>
-            <input name="employeeCount" id="employeeCount" type="number" />
+            <input name="employeeCount" disabled id="employeeCount" type="number" />
           </div>
 
           <div class="form-group">
             <label for="annualProfit">ANNUAL PROFIT (INDICATE CURRENCY)</label>
             <div class="currency-group">
-              <input name="annualProfit" id="annualProfit" type="number" min="0" step="any" />
-              <select name="currency" id="currency" type="text">
+              <input name="annualProfit" disabled id="annualProfit" type="number" min="0" step="any" />
+              <select name="currency" disabled id="currency" type="text">
                 <option value="" disabled selected></option>
               </select>
             </div>
           </div>
         </div>
 
-        <h2 class="assistance-light-title">
-          Contact person for B2B TA request
-        </h2>
+        <h2 class="assistance-light-title"> Contact person for B2B TA request </h2>
 
         <div class="form-row">
           <div class="form-group">
             <label for="contactName">NAME</label>
-            <input name="contactName" id="contactName" type="text" />
+            <input name="contactName" disabled id="contactName" type="text" />
           </div>
           <div class="form-group">
             <label for="contactTitle">TITLE</label>
-            <input name="contactTitle" id="contactTitle" type="text" />
+            <input name="contactTitle" disabled id="contactTitle" type="text" />
           </div>
         </div>
         <div class="form-row">
           <div class="form-group">
             <label for="contactEmail">EMAIL</label>
-            <input name="contactEmail" id="contactEmail" type="text" />
+            <input name="contactEmail" disabled id="contactEmail" type="text" />
           </div>
           <div class="form-group">
             <label for="contactWhatsapp">WHATSAPP NUMBER</label>
-            <input name="contactWhatsapp" id="contactWhatsapp" type="text" />
+            <input name="contactWhatsapp" disabled id="contactWhatsapp" type="text" />
           </div>
         </div>
 
@@ -199,7 +197,7 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
     crossorigin="anonymous"></script>
-  <script type="text/javascript" src="../assets/js/script.js"></script>
+  <script type="text/javascript" src="../../assets/js/script.js"></script>
   <script>
     $("#assistanceSubmit").click((event) => {
       event.preventDefault();
